--- a/src/app/elite/elite.component.html
+++ b/src/app/elite/elite.component.html
@@ -6,8 +6,7 @@
         <!-- <p style="color: rgb(255, 55, 255);animation: swing 200ms ease-in-out 100ms forwards">RIDES</p> -->
     </div>
     <!-- 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 END LOGO 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 -->
-    <div class="menu"  style="    background-image: url(./assets/img/elite/pattherBG.jpg);
-    background-size: contain;">
+    <div class="menu"  style="background-image: url(./assets/img/elite/pattherBG.jpg);background-size: contain;">
 
 
 
