--- a/src/app/elite/elite-business-card/elite-business-card.component.scss
+++ b/src/app/elite/elite-business-card/elite-business-card.component.scss
@@ -48,7 +48,7 @@
     .GO {
         width: 140px;
         height: 140px;
-        border: 5px solid white;
+        border: 5px solid #fffefeb2;
         // position: relative;
         // top: 38%;
         // left: 31%;
@@ -56,7 +56,7 @@
         font-size: 88px;
         line-height: 31px;
         background-color: black;
-        color: white;
+        color: #fffefeb2;
         font-family: auto;
         z-index: 2;
         animation: heartBeat 10000ms ease-in-out 1ms forwards;
@@ -72,19 +72,20 @@
     .GO_Off {
         width: 140px;
         height: 140px;
-        border: 5px solid #ceab04;
+        border: 5px solid #d1ac6f;
+        color: #d5ad6d; /*if no support for background-clip*/        
+       
+        display:inline;
         // position: relative;
         // top: 38%;
         // left: 31%;
         outline: none;
         font-size: 88px;
         line-height: 30px;
-        background-color: black;
-        color: #ceab04;
         font-family: auto;
         z-index: 2;
         transition: all 100ms ease-in-out;
-        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        text-shadow: 0 0.04em 0.04em rgba(247, 203, 8, 0.3);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
         @include BoxShadow(6);
         // animation: heartBeat 10000ms ease-in-out 20ms infinite;
@@ -93,90 +94,75 @@
         @include BoxShadow(6);
         width: 55px;
         height: 55px;
-        border: 3px solid #ceab04;
+        border: 3px solid #d1ac6f;
         position: absolute;
-        top: -47%;
-        left: -7%;
+        top: -53%;
+        left: -14%;
         outline: none;
         font-size: 23px;
         line-height: 10px;
         background-color: black;
-        color: #ceab04;
+        color: #d5ad6d;
         font-family: auto;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
+        
     }
     .G2 {
         @include BoxShadow(6);
         width: 55px;
         height: 55px;
-        border: 3px solid #ceab04;
+        border: 3px solid #d1ac6f;
         position: absolute;
-        top: -15%;
-        left: 102%;
+        top: -31%;
+        left: 107%;
         outline: none;
         font-size: 23px;
         line-height: 10px;
         background-color: black;
-        color: #ceab04;
+        color: #d5ad6d;
         font-family: auto;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
     .G3 {
         @include BoxShadow(6);
         width: 55px;
         height: 55px;
-        border: 3px solid #ceab04;
+        border: 3px solid #d1ac6f;
         position: absolute;
-        top: -50%;
-        left: 59%;
+        top: -61%;
+        left: 52%;
         outline: none;
         font-size: 23px;
         line-height: 10px;
         background-color: black;
-        color: #ceab04;
+        color: #d5ad6d;
         font-family: auto;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
     .G4 {
         @include BoxShadow(6);
         width: 55px;
         height: 55px;
-        border: 3px solid #ceab04;
+        border: 3px solid #d1ac6f;
         position: absolute;
-        top: 36%;
-        left: 116%;
+        top: 32%;
+        left: 125%;
         outline: none;
         font-size: 23px;
         line-height: 10px;
         background-color: black;
-        color: #ceab04;
+        color: #d5ad6d;
         font-family: auto;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
 }
 
 $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 @for $i from 1 through 5 {
-    .voteIconButton:nth-child(#{$i}) {
-        // color: nth($voteIconsColor, $i);
-        animation: fadeIn 0.2s ease-in-out backwards;
-        animation-iteration-count: 1;
-        animation-delay: $i * 0.15 + s;
-        @include BoxShadow(6);
-    }
-
-    .voteIconButton:hover:nth-child(#{$i}) {
-        color: nth($voteIconsColor, $i);
-        transition: all 2ms ease-in-out;
-        position: relative;
-        top: -2px;
-        transform: scale(1.2);
-        background: white;
-    }
-
-    .voteOverviewBox:nth-child(#{$i}) {
-        // color: nth($voteIconsColor, $i);
-        animation: fadeIn 0.2s ease-in-out backwards;
-        animation-iteration-count: 1;
-        animation-delay: $i * 0.15 + s;
-    }
-
     .GG:nth-child(#{$i}) {
         // color: nth($voteIconsColor, $i);
         animation: fadeIn 0.2s ease-in-out backwards;
