--- a/src/app/elite/elite-business-card/elite-business-card.component.html
+++ b/src/app/elite/elite-business-card/elite-business-card.component.html
@@ -37,7 +37,7 @@
 
         </div>
 
-
+        <div style="font-family: Oprah;color: white;position: fixed;bottom: 70px;max-width: 500px;font-size:18px;z-index: 9;">Cesar Vega</div>
 
         <img src="./assets/img/elite/CesarVega/bodyR.jpg" style="width: 100%;">
         <img src="./assets/img/elite/CesarVega/footer.jpg"
