new WPA installed

--- a/src/app/elite/elite-business-card/elite-business-card.component.html
+++ b/src/app/elite/elite-business-card/elite-business-card.component.html
@@ -1,9 +1,9 @@
 <!-- <div id="example1" style="background: url('./assets/img/elite/CesarVega/charlieVBG.jpg')">
     
   </div> -->
+
 <div class="mainContainer disable-dbl-tap-zoom">
-    <div
-        style="display: flex;flex-direction: column;align-items: center;justify-items: space-evenly;align-items: center;justify-content: center;max-width: 500px;">
+    <div style="display: flex;flex-direction: column;align-items: center;justify-items: space-evenly;align-items: center;justify-content: center;max-width: 500px;">
 
         <img src="./assets/img/elite/CesarVega/header.jpg"
             style="width: 100%;position:fixed;top: 0px;max-width: 500px;">
@@ -36,8 +36,6 @@
             </button>
 
         </div>
-
-        <div style="font-family: Oprah;color: white;position: fixed;bottom: 70px;max-width: 500px;font-size:18px;z-index: 9;">Cesar Vega</div>
 
         <img src="./assets/img/elite/CesarVega/bodyR.jpg" style="width: 100%;">
         <img src="./assets/img/elite/CesarVega/footer.jpg"
