--- a/src/assets/fonts/hackers.scss
+++ b/src/assets/fonts/hackers.scss
@@ -43,6 +43,10 @@
     font-family: Oprah;
     src: url("OprahShowDemoRegular.ttf") format("truetype");
 }
+@font-face {
+    font-family: Anggraini;
+    src: url("Anggraini.ttf") format("truetype");
+}
 
 
 // serif
