--- a/src/app/elite/elite-business-card/elite-business-card.component.scss
+++ b/src/app/elite/elite-business-card/elite-business-card.component.scss
@@ -30,46 +30,45 @@
     }
 }
 
+@media (min-width: 576px) {
+    .mainContainer {
+        display: flex;
+        flex-direction: column;
+        height: 90vh;
+        width: 500px;
+        max-width: 500px;
+        justify-content: space-between;
+        align-items: center;
+        border: black solid 5px;
+        background-color: rgb(0 0 0 / 88%);
+        border-radius: 10px;
+        overflow: hidden;
 
-.mainContainer {
-    display: flex;
-    flex-direction: column;
-    height: 90vh;
-    width: 500px;
-    max-width: 500px;
-    justify-content: space-between;
-    align-items: center;
-    border: black solid 5px;
-    background-color: rgb(0 0 0 / 88%);
-    border-radius: 10px;
-    overflow: hidden;
+        position: absolute;
+        top: 53%;
+        left: 50%;
+        -ms-transform: translate(-50%, -53%);
+        transform: translate(-50%, -53%);
+        @include BoxShadow(6);
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -53%);
-    transform: translate(-50%, -53%);
-    @include BoxShadow(6);}
+        .body-bg {
+            width: 100%;
+            height: 90vh;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .mainContainer {
+        overflow: hidden;
+    }
+}
 
 .smartRadialButton {
-    .fisheye {
-        //  DEPRECATED
-        position: absolute;
-        // right: 485px;
-        // bottom: 16px;
-        outline: none;
-        font-size: 81px;
-        display: inline;
-        color: red;
-        z-index: 1;
-        transform-origin: 50px 50px;
-        transition: all 30s ease-in-out;
-        animation: heartBeat 10000ms ease-in-out 100ms infinite, fadeOut 10000ms ease-in-out 100ms infinite;
-    }
     .GO {
         width: 140px;
         height: 140px;
-        border: 5px solid #fffefeb2;
+        border: 5px solid #ffffffb2;
         // position: relative;
         // top: 38%;
         // left: 31%;
@@ -77,7 +76,7 @@
         font-size: 88px;
         line-height: 31px;
         background-color: black;
-        color: #fffefeb2;
+        color: #ffffffb2;
         font-family: auto;
         z-index: 2;
         animation: heartBeat 10000ms ease-in-out 1ms forwards;
@@ -94,9 +93,9 @@
         width: 140px;
         height: 140px;
         border: 5px solid #d1ac6f;
-        color: #d5ad6d; /*if no support for background-clip*/        
-       
-        display:inline;
+        color: #d5ad6d; /*if no support for background-clip*/
+
+        display: inline;
         // position: relative;
         // top: 38%;
         // left: 31%;
@@ -127,7 +126,6 @@
         font-family: auto;
         text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
         box-shadow: inset inset 0px 0px 5px #c1c1c1;
-        
     }
     .G2 {
         @include BoxShadow(6);
