--- a/src/app/elite/elite-business-card/elite-business-card.component.html
+++ b/src/app/elite/elite-business-card/elite-business-card.component.html
@@ -1,32 +1,31 @@
-
-<div class="mainContainer disable-dbl-tap-zoom" style="z-index: 999;color: ivory;">
+<!-- 
+<div *ngIf="isSettingsOn" class="settings-box" style="z-index: 999;color: ivory;">
     Settings
-</div>
-<div class="mainContainer disable-dbl-tap-zoom">
+    Settings
+
+</div> -->
+<div [ngClass]="themeClass" class="mainContainer disable-dbl-tap-zoom">
     <div style="display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 500px;">
 
-        <h1 style="font-family: Anggraini;
-        color: #d5ad6d;
-        position: fixed;
-        top: 52px;
-        z-index: 1;
-        font-size: 70px;animation: backInDown 1000ms ease-in-out 0ms normal forwards;">{{title}}</h1>
-
-        <img src="./assets/img/elite/CesarVega/header.jpg"
-            style="width: 100%;position:fixed;top: 0px;max-width: 500px;">
+        <h1 class="title">{{title}}</h1>
 
 
-        <img src="./assets/img/elite/CesarVega/body.jpg" style="width: 100%;height: 100%;">
+        <!-- HEADER -->
+        <img [src]="theme[0].header" class="header" >
 
+
+        <!-- BODY -->
+        <img [src]="theme[0].body" style="width: 100%;height: 100%;" class="kenburns-top">
 
         <!-- BI BRAND GO BUTTON -->
-        <div class="smartRadialButton" style="">
+        <div class=" smartRadialButton ">
 
-            <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'" style="-webkit-background-clip: text; background-clip: text;"
-                mat-icon-button (click)="goVote()">
+            <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'"
+                style="-webkit-background-clip: text; background-clip: text; background: antiquewhite;" mat-icon-button
+                (click)="goVote()">
                 {{logoInitial}}
             </button>
 
@@ -48,30 +47,17 @@
 
         </div>
 
+        <div class="name">
+            {{username}}</div>
 
-        <h3 style="    
-        font-family: caviar;
-        color: #d5ad6d;
-        position: fixed;
-        bottom: 16px;
-        z-index: 1;animation:backInUp 3000ms ease-in-out 0ms normal forwards;">{{userDescription}}</h3>
+
+        <h3 class="description">{{userDescription}}</h3>
 
         <!-- <img src="./assets/img/elite/CesarVega/bodyR.jpg" style="width: 100%;"> -->
-        <img src="./assets/img/elite/CesarVega/footer.jpg"
-            style="width: 100%;position: fixed;bottom: 0px;max-width: 500px;">
+        <img [src]="theme[0].footer" class="footer">
 
 
-        <div style="font-family:Anggraini;
-            color: #d5ad6d;
-            position: fixed;
-            text-align: center;
-            width: 100%;
-            height: 220px;
-            bottom: -126px;
-            z-index: 1;
-            font-size: 60px;animation:backInUp 2500ms ease-in-out 0ms normal forwards;">
-            {{username}}</div>
+
 
     </div>
 </div>
-
