--- a/src/app/elite/elite-business-card/elite-business-card.component.html
+++ b/src/app/elite/elite-business-card/elite-business-card.component.html
@@ -4,29 +4,25 @@
     Settings
 
 </div> -->
-<div [ngClass]="themeClass" class="mainContainer disable-dbl-tap-zoom">
-    <div style="display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 500px;">
+<div [ngClass]="theme[themeIndex].themeName"  class="mainContainer disable-dbl-tap-zoom">
+   
 
-        <h1 class="title">{{title}}</h1>
+        <h1 class="title" (click)="changeTheme()">{{user[userIndex].title}}</h1>
 
 
         <!-- HEADER -->
-        <img [src]="theme[0].header" class="header" >
+        <img [src]="theme[themeIndex].header" class="header" >
 
 
         <!-- BODY -->
-        <img [src]="theme[0].body" style="width: 100%;height: 100%;" class="kenburns-top">
+        <img [src]="theme[themeIndex].body" style="width: 100%;height: 100%;" class="kenburns-top">
 
         <!-- BI BRAND GO BUTTON -->
         <div class=" smartRadialButton ">
 
-            <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'"
-                style="-webkit-background-clip: text; background-clip: text; background: antiquewhite;" mat-icon-button
+            <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'" mat-icon-button
                 (click)="goVote()">
-                {{logoInitial}}
+                {{user[userIndex].logoInitial}}
             </button>
 
             <button (click)="sendQrCode('WhatsApp')" *ngIf="isRadialMenuOn" class="G4 GG" mat-icon-button>
@@ -48,16 +44,16 @@
         </div>
 
         <div class="name">
-            {{username}}</div>
+            {{user[userIndex].username}}</div>
 
 
-        <h3 class="description">{{userDescription}}</h3>
+        <h3 class="description">{{user[userIndex].userDescription}}</h3>
 
         <!-- <img src="./assets/img/elite/CesarVega/bodyR.jpg" style="width: 100%;"> -->
-        <img [src]="theme[0].footer" class="footer">
+        <img [src]="theme[themeIndex].footer" class="footer">
 
 
 
 
-    </div>
+    
 </div>
